--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="Trashbin" id="green" ondragover="allowDrop(event)" ondrop="drop(event)"><img src="./assets/img2/Grün.png" alt=""></div>
     <div class="Trashbin" id="grey" ondragover="allowDrop(event)" ondrop="drop(event)"><img src="./assets/img2/Grau.png" alt=""></div>
     <div class="Trashbin" id="yellow" ondragover="allowDrop(event)" ondrop="drop(event)"><img src="./assets/img2/Gelb.png " alt=""></div>
-    <div class="Trashbin" id="brown"  ondragover="allowDrop(event)" ondrop="drop(event)"><img src="./assets/img2/Rot.png " alt=""></div>
+    <div class="Trashbin" id="brown"  ondragover="allowDrop(event)" ondrop="drop(event)"><img src="./assets/img2/Gelb.png" alt=""></div>
 </div>
 </div>
    
